Update 'jnbp1cd0c-go' component image to: quay.io/rhtap_qe/rhtap-qe:4f2c190106c90f4bf8ed92963d101341cb0a9f1a@sha256:b1344fbaaea167165e4cb8660b6908400aade9ba9cb2c2bd73ada90fbf7a4b04

--- a/components/jnbp1cd0c-go/overlays/development/deployment-patch.yaml
+++ b/components/jnbp1cd0c-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: jnbp1cd0c-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:4f2c190106c90f4bf8ed92963d101341cb0a9f1a@sha256:b1344fbaaea167165e4cb8660b6908400aade9ba9cb2c2bd73ada90fbf7a4b04
+          name: container-image
